# Notes

./: .gitignore  about-gpu-2026-06-06T06-37-17-803Z.txt  python-hg-c1-functions-vs-classes.md  python-hg-c2-classes-properly.md  python-hg-c3-inheritance.md  python-hg-c4-dunder-methods.md  python-hg-f1-scope.md  python-hg-f2-args-kwargs.md  python-hg-f3-decorators.md
.obsidian/: app.json  appearance.json  community-plugins.json  daily-notes.json  types.json
.true-recall/: true-recall-9xe2ks70.db
.vault-operator/: vault-dna.json
.zennotes/: note-meta-cache-v1.json  vault.json
Agents/: lessons-process.md  note-mocs.md  note-structure.md  note-writing.md  summary-papers.md
Clippings/: Data Types - The Rust Programming Language.md
Inbox/: LinkedIn follow-ups 2026-05-.md  The core insight from Hyde.md
JOB-HUNT-OPS/: architecture.md  job-schema.md  (+1 more)
Projects/active/Dusky-Theme-Engine/wpick/: 00-Architecture.md  01-Setup.md  02-Database.md  03-Extraction.md  04-Clustering.md  05-Assignment.md  06-Orchestrator.md  07-Picker.md  08-CLI.md  09-Tests.md  10-Deployment.md  PLAN.md  Phase-2-Upgrades.md  pyproject.toml
Projects/active/Dusky-Theme-Engine/wpick/Refactor/: 00-Architecture.md  01-Setup.md  02-Database.md  03-Extraction.md  04-Clustering.md  05-Assignment.md  06-Orchestrator.md  07-Picker.md  08-CLI.md  09-Tests.md
Projects/active/Dusky-Theme-Engine/wpick/src/wpick/: assigner.py  config.py  db.py  models.py  schema.sql
Projects/active/Dusky-Theme-Engine/wpick/tests/: conftest.py  test_assigner.py  test_config.py  test_db.py  test_models.py  test_pure.py
(+660 files in other folders)
