[project]
name = "wpick"
version = "0.1.0"
description = "Dusky Theme Engine — wallpaper picker"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/wpick"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70